--- a/react/ecommerce_product/public/index.html
+++ b/react/ecommerce_product/public/index.html
@@ -4,36 +4,33 @@
     <title>Darveys - Product</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../assets/images/favicon.png" type="image/png" />
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/assets/images/favicon.png"
+      type="image/png"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../assets/css/common/owl.carousel.min.css" />
     <link
       rel="stylesheet"
-      href="../assets/css/common/owl.theme.default.min.css"
+      href="%PUBLIC_URL%/assets/css/common/owl.carousel.min.css"
     />
-    <link rel="stylesheet" href="../assets/css/common/header.css" />
-    <link rel="stylesheet" href="../assets/css/common/ui_kit.css" />
-    <link rel="stylesheet" href="../assets/css/main.css" />
-    <link rel="stylesheet" href="../assets/css/style.css" />
-    <link rel="stylesheet" href="../assets/css/mobile.css" />
-
-    <!-- JS STARTS HERE -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../assets/js/jquery.elevatezoom.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-    <script src="../assets/js/owl.carousel.min.js"></script>
-    <script src="../assets/js/jquery.selectscroll.js"></script>
-    <script src="../assets/js/uikit.js"></script>
-    <script src="../assets/js/custom.js"></script>
-    <!-- JS ENDS HERE -->
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/css/common/owl.theme.default.min.css"
+    />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/common/header.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/common/ui_kit.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/mobile.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
